dataset1235/2025-2/805158916/users/2200760145/executions/1584167357_997093868.log
== SUBMISSION (2025-08-27 14:15:46)
-- CODE: 
a = float(input())
b = float(input())
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:17:17)
-- CODE: 
a = float(input())
b = float(input())
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:20:45)
-- CODE: 
a = float(input())
b = float(input())
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:16:07)
-- CODE: 
a = float(input())
b = float(input())
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:17:09)
-- CODE: 
a = float(input()
b = float(input()
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:18:17)
-- CODE: 
a = float(input())
b = float(input())
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:17:18)
-- CODE: 
a = float(input())
b = float(input())
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:18:06)
-- CODE: 
a = float(input()))
b = float(input()))
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = float(input()))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = float(input()))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = float(input()))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = float(input()))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = float(input()))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = float(input()))
                      ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:17:41)
-- CODE: 
a = (float(input()))
b = (float(input()))
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:16:14)
-- CODE: 
a = float(input())
b = float(input())
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:18:53)
-- CODE: 
a = float(input())
b = float(input())
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:16:55)
-- CODE: 
a = (float(input())
b = (float(input())
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:18:54)
-- CODE: 
a = float(input())
b = float(input())
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:18:44)
-- CODE: 
a = float(input())
b = float(input())
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:18:46)
-- CODE: 
a = float(input())
b = float(input())
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:16:47)
-- CODE: 
a = (float(input())
b = (float(input())
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:17:48)
-- CODE: 
a = (float(input()))
b = (float(input()))
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:21:27)
-- CODE: 
a = int(input())
b = int(input())
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:16:00)
-- CODE: 
a = float(input())
b = float(input())
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:20:32)
-- CODE: 
a = float(input())
b = float(input())
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:17:35)
-- CODE: 
a = (float(input()))
b = (float(input()))
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:19:24)
-- CODE: 
a = float(input())
b = float(input())
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:16:16)
-- CODE: 
a = float(input())
b = float(input())
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:17:36)
-- CODE: 
a = (float(input()))
b = (float(input()))
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:16:07)
-- CODE: 
a = float(input())
b = float(input())
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:16:08)
-- CODE: 
a = float(input())
b = float(input())
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:16:54)
-- CODE: 
a = (float(input())
b = (float(input())
soma = (a + b)
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = (float(input())
         ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
